--- a/forum.html
+++ b/forum.html
@@ -313,7 +313,7 @@
             transform: translateY(-1px);
         }
 
-        /* Modal Styles */
+        /* Modal Styles - UPDATED */
         .modal {
             display: none;
             position: fixed;
@@ -326,54 +326,91 @@
             justify-content: center;
             align-items: center;
             backdrop-filter: blur(5px);
+            padding: 20px;
+            overflow-y: auto;
         }
 
         .modal-content {
             background: rgba(10, 14, 39, 0.95);
             border: 2px solid #ffd60a;
             border-radius: 8px;
-            padding: 40px;
-            width: 90%;
-            max-width: 600px;
+            padding: 30px;
+            width: 100%;
+            max-width: 700px;
+            max-height: 90vh;
+            overflow-y: auto;
             box-shadow: 0 0 50px rgba(255, 214, 10, 0.3);
             position: relative;
+            animation: modalSlideIn 0.3s ease-out;
+        }
+
+        @keyframes modalSlideIn {
+            from {
+                opacity: 0;
+                transform: translateY(-20px) scale(0.95);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0) scale(1);
+            }
         }
 
         .close-modal {
             position: absolute;
             top: 15px;
-            right: 20px;
+            right: 15px;
             color: #ff006e;
-            font-size: 30px;
+            font-size: 24px;
             cursor: pointer;
             background: none;
             border: none;
             font-weight: bold;
             transition: all 0.3s ease;
+            width: 30px;
+            height: 30px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 4px;
         }
 
         .close-modal:hover {
             color: #ff1493;
+            background: rgba(255, 0, 110, 0.1);
             transform: scale(1.1);
         }
 
         .modal h2 {
             color: #00f5ff;
             font-family: 'JetBrains Mono', monospace;
-            margin-bottom: 25px;
+            margin-bottom: 20px;
             text-transform: uppercase;
             letter-spacing: 1px;
+            font-size: 18px;
+        }
+
+        /* Two-column layout for create thread */
+        .form-row {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin-bottom: 20px;
+        }
+
+        .form-col {
+            flex: 1;
+            min-width: 250px;
         }
 
         .form-group {
-            margin-bottom: 20px;
+            margin-bottom: 15px;
         }
 
         .form-group label {
             display: block;
             color: #06ffa5;
-            margin-bottom: 8px;
-            font-size: 14px;
+            margin-bottom: 6px;
+            font-size: 13px;
             font-weight: 500;
         }
 
@@ -381,7 +418,7 @@
         .form-group textarea,
         .form-group select {
             width: 100%;
-            padding: 12px;
+            padding: 10px 12px;
             background: rgba(6, 255, 165, 0.05);
             border: 1px solid #06ffa5;
             border-radius: 4px;
@@ -397,6 +434,10 @@
             outline: none;
             border-color: #ffd60a;
             box-shadow: 0 0 10px rgba(255, 214, 10, 0.3);
+        }
+
+        .form-group.full-width {
+            width: 100%;
         }
 
         .submit-btn {
@@ -420,17 +461,24 @@
             box-shadow: 0 0 20px rgba(255, 0, 110, 0.4);
         }
 
+        /* Reply modal - more compact */
+        #replyModal .modal-content {
+            max-width: 600px;
+        }
+
         .replies-section {
             margin-top: 15px;
             padding-top: 15px;
             border-top: 1px dashed #06ffa5;
+            max-height: 300px;
+            overflow-y: auto;
         }
 
         .reply {
             background: rgba(0, 245, 255, 0.05);
             border: 1px solid #00f5ff;
             border-radius: 4px;
-            padding: 15px;
+            padding: 12px;
             margin-top: 10px;
             position: relative;
         }
@@ -467,17 +515,19 @@
             justify-content: center;
             align-items: center;
             backdrop-filter: blur(5px);
+            padding: 20px;
         }
 
         .password-modal-content {
             background: rgba(10, 14, 39, 0.95);
             border: 2px solid #ff006e;
             border-radius: 8px;
-            padding: 40px;
-            width: 90%;
+            padding: 30px;
+            width: 100%;
             max-width: 400px;
             box-shadow: 0 0 50px rgba(255, 0, 110, 0.3);
             position: relative;
+            animation: modalSlideIn 0.3s ease-out;
         }
 
         .password-modal h2 {
@@ -487,6 +537,7 @@
             text-align: center;
             text-transform: uppercase;
             letter-spacing: 1px;
+            font-size: 16px;
         }
 
         .password-input {
@@ -580,7 +631,7 @@
             }
 
             .content {
-                padding: 40px 25px;
+                padding: 30px 20px;
                 border-radius: 6px;
             }
 
@@ -592,10 +643,13 @@
             .forum-header {
                 flex-direction: column;
                 align-items: stretch;
+                gap: 15px;
             }
 
             .create-thread-btn {
                 width: 100%;
+                padding: 10px 20px;
+                font-size: 12px;
             }
 
             .forum-section h2 {
@@ -620,18 +674,27 @@
             }
 
             .modal-content {
-                padding: 30px 20px;
-                width: 95%;
+                padding: 25px 20px;
+                max-height: 85vh;
+            }
+
+            .form-row {
+                flex-direction: column;
+                gap: 15px;
+            }
+
+            .form-col {
+                min-width: 100%;
             }
 
             .password-modal-content {
-                padding: 30px 20px;
+                padding: 25px 20px;
             }
         }
 
         @media (max-width: 480px) {
             .content {
-                padding: 30px 20px;
+                padding: 25px 15px;
             }
 
             .content h1 {
@@ -661,11 +724,19 @@
             }
 
             .modal-content {
-                padding: 25px 15px;
+                padding: 20px 15px;
             }
 
             .password-modal-content {
-                padding: 25px 15px;
+                padding: 20px 15px;
+            }
+
+            .modal h2 {
+                font-size: 16px;
+            }
+
+            .password-modal h2 {
+                font-size: 14px;
             }
         }
     </style>
@@ -724,23 +795,29 @@
             <button class="close-modal" onclick="closeCreateThreadModal()">&times;</button>
             <h2>CREATE NEW THREAD</h2>
             <form id="threadForm">
-                <div class="form-group">
-                    <label for="threadCategory">CATEGORY</label>
-                    <select id="threadCategory" required>
-                        <option value="general">General Discussion</option>
-                        <option value="webdev">Web Development</option>
-                        <option value="design">Design & Creative</option>
-                    </select>
+                <div class="form-row">
+                    <div class="form-col">
+                        <div class="form-group">
+                            <label for="threadCategory">CATEGORY</label>
+                            <select id="threadCategory" required>
+                                <option value="general">General Discussion</option>
+                                <option value="webdev">Web Development</option>
+                                <option value="design">Design & Creative</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="threadAuthor">YOUR NAME</label>
+                            <input type="text" id="threadAuthor" placeholder="Enter your name" required maxlength="50">
+                        </div>
+                    </div>
+                    <div class="form-col">
+                        <div class="form-group">
+                            <label for="threadTitle">TITLE</label>
+                            <input type="text" id="threadTitle" placeholder="Enter thread title" required maxlength="100">
+                        </div>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label for="threadTitle">TITLE</label>
-                    <input type="text" id="threadTitle" placeholder="Enter thread title" required maxlength="100">
-                </div>
-                <div class="form-group">
-                    <label for="threadAuthor">YOUR NAME</label>
-                    <input type="text" id="threadAuthor" placeholder="Enter your name" required maxlength="50">
-                </div>
-                <div class="form-group">
+                <div class="form-group full-width">
                     <label for="threadContent">CONTENT</label>
                     <textarea id="threadContent" rows="5" placeholder="Write your thread content here..." required maxlength="1000"></textarea>
                 </div>
@@ -761,13 +838,17 @@
                 <!-- Replies will be loaded here -->
             </div>
             
-            <h2 style="margin-top: 30px;">POST A REPLY</h2>
+            <h2 style="margin-top: 20px; margin-bottom: 15px;">POST A REPLY</h2>
             <form id="replyForm">
-                <div class="form-group">
-                    <label for="replyAuthor">YOUR NAME</label>
-                    <input type="text" id="replyAuthor" placeholder="Enter your name" required maxlength="50">
+                <div class="form-row">
+                    <div class="form-col">
+                        <div class="form-group">
+                            <label for="replyAuthor">YOUR NAME</label>
+                            <input type="text" id="replyAuthor" placeholder="Enter your name" required maxlength="50">
+                        </div>
+                    </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group full-width">
                     <label for="replyContent">YOUR REPLY</label>
                     <textarea id="replyContent" rows="4" placeholder="Write your reply here..." required maxlength="500"></textarea>
                 </div>
@@ -1008,22 +1089,24 @@
         // Modal functions
         function openCreateThreadModal() {
             document.getElementById('createThreadModal').style.display = 'flex';
+            // Reset form
+            document.getElementById('threadForm').reset();
         }
 
         function closeCreateThreadModal() {
             document.getElementById('createThreadModal').style.display = 'none';
-            document.getElementById('threadForm').reset();
         }
 
         function openReplyModal(threadId) {
             currentThreadId = threadId;
             loadThreadDetails(threadId);
             document.getElementById('replyModal').style.display = 'flex';
+            // Reset form
+            document.getElementById('replyForm').reset();
         }
 
         function closeReplyModal() {
             document.getElementById('replyModal').style.display = 'none';
-            document.getElementById('replyForm').reset();
         }
 
         function openPasswordModal() {
